--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,30 @@
   letter-spacing: 0.6px;
 }
 
+
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  /* this makes sure the padding and the border is included in the box sizing */
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-x: inherit;
+}
+
+
 body {
   background-color: #EEE8FF;
+
 }
 
 .nav {
